# aruco

./: CMakeLists.txt  ChangeLog  README  aruco.cpp  aruco.h  aruco_create_marker.cpp  aruco_test.cpp  aruco_test_gl.cpp  config.cmake.in  dox.in  makefile
src/: aruco.cpp  aruco.h  arucoboard.cpp  arucoboard.h  arucofidmarkers.cpp  arucofidmarkers.h  board.cpp  board.h  boarddetector.cpp  boarddetector.h  cameraparameters.cpp  cameraparameters.h  cvdrawingutils.cpp  marker.cpp  marker.h  markerdetector.cpp  markerdetector.h
utils/: CMakeLists.txt  aruco_create_board.cpp  aruco_create_marker.cpp  aruco_selectoptimalmarkers.cpp  aruco_simple_board.cpp  aruco_test.cpp  aruco_test_board.cpp  aruco_test_board_gl.cpp  aruco_test_gl.cpp
